fix toolbar drupal z-index

--- a/web/themes/quartiers_solidaires/assets/components/layout.scss
+++ b/web/themes/quartiers_solidaires/assets/components/layout.scss
@@ -11,3 +11,8 @@
     }
   }
 }
+
+// Drupal
+#toolbar-administration {
+  z-index: ($zindex-tooltip * 2);
+}
